--- a/Challenge.Api/appsettings.json
+++ b/Challenge.Api/appsettings.json
@@ -7,5 +7,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Filename=Challenge.db"
+  },
+  "JWTConfiguration": {
+    "JwtKey": "d6ce3c1e-3b7a-4bcd-a843-d8bf8066b646",
+    "JwtExpireDays": 7,
+    "JwtIssuer": "https://localhost:44364"
   }
 }
