DTOs. Results. Default role. Base controller.

--- a/Challenge.Api/appsettings.Development.json
+++ b/Challenge.Api/appsettings.Development.json
@@ -1,9 +1,19 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Filename=Challenge.db"
+  },
+  "Jwt": {
+    "JwtKey": "d6ce3c1e-3b7a-4bcd-a843-d8bf8066b646",
+    "JwtExpireMinutes": 120,
+    "JwtIssuer": "https://localhost:44364"
+  },
+  "Account": {
+    "DefaultRole": "User"
   }
 }
