--- a/Challenge.Api/appsettings.json
+++ b/Challenge.Api/appsettings.json
@@ -8,9 +8,12 @@
   "ConnectionStrings": {
     "Default": "Filename=Challenge.db"
   },
-  "JWTConfiguration": {
+  "Jwt": {
     "JwtKey": "d6ce3c1e-3b7a-4bcd-a843-d8bf8066b646",
-    "JwtExpireDays": 7,
+    "JwtExpireMinutes": 120,
     "JwtIssuer": "https://localhost:44364"
+  },
+  "Account": {
+    "DefaultRole":  "User"
   }
 }
